--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:13:15 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:13:58 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -139,38 +139,6 @@ body {
   </tr>
   </thead>
   <tbody>
-    <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-19</td>
-      <td>Scottie Scheffler -11
--3 thru 9</td>
-      <td>Cameron Smith(W) -5
--3 thru 12</td>
-      <td>Corey Conners -2
--1 thru 12</td>
-      <td>Will Zalatoris -1
-E thru 12</td>
-      <td class="greyout leftborder">Russell Henley +7
-+4 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Doug Muir</td>
-      <td class="bigbold">-18</td>
-      <td>Scottie Scheffler(W) -11
--3 thru 9</td>
-      <td>Cameron Smith -5
--3 thru 12</td>
-      <td>Will Zalatoris -1
-E thru 12</td>
-      <td>Hideki Matsuyama +1
-+4 thru 11</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
     <tr>
       <td class="bigbold">Team Steve</td>
       <td class="bigbold">-17</td>
@@ -184,6 +152,22 @@ Missed Cut</td>
 -1 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +6
 +5 thru 16</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-17</td>
+      <td>Scottie Scheffler -11
+-3 thru 9</td>
+      <td>Cameron Smith(W) -5
+-3 thru 12</td>
+      <td>Corey Conners -2
+-1 thru 12</td>
+      <td>Will Zalatoris +1
++2 thru 13</td>
+      <td class="greyout leftborder">Russell Henley +7
++4 (F)</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -204,36 +188,20 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Mark MacKave</td>
-      <td class="bigbold">-17</td>
-      <td>Scottie Scheffler -11
+      <td class="bigbold">Doug Muir</td>
+      <td class="bigbold">-16</td>
+      <td>Scottie Scheffler(W) -11
 -3 thru 9</td>
       <td>Cameron Smith -5
 -3 thru 12</td>
-      <td>Corey Conners -2
--1 thru 12</td>
-      <td>Will Zalatoris -1
-E thru 12</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout">Xander Schauffele(W)
+      <td>Hideki Matsuyama +1
++4 thru 11</td>
+      <td>Will Zalatoris +1
++2 thru 13</td>
+      <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-16</td>
-      <td>Scottie Scheffler -11
--3 thru 9</td>
-      <td>Shane Lowry -4
--1 thru 10</td>
-      <td>Will Zalatoris -1
-E thru 12</td>
-      <td>Justin Thomas(W) E
-+1 thru 14</td>
-      <td class="greyout leftborder">Tony Finau +4
-+2 (F)</td>
-      <td class="greyout">Patrick Cantlay +6
-+5 thru 16</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 2</td>
@@ -268,16 +236,48 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Mark MacKave</td>
+      <td class="bigbold">-15</td>
+      <td>Scottie Scheffler -11
+-3 thru 9</td>
+      <td>Cameron Smith -5
+-3 thru 12</td>
+      <td>Corey Conners -2
+-1 thru 12</td>
+      <td>Will Zalatoris +1
++2 thru 13</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout">Xander Schauffele(W)
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">-14</td>
+      <td>Scottie Scheffler -11
+-3 thru 9</td>
+      <td>Shane Lowry -4
+-1 thru 10</td>
+      <td>Justin Thomas(W) E
++1 thru 14</td>
+      <td>Will Zalatoris +1
++2 thru 13</td>
+      <td class="greyout leftborder">Tony Finau +4
++2 (F)</td>
+      <td class="greyout">Patrick Cantlay +6
++5 thru 16</td>
+    </tr>
+    <tr>
       <td class="bigbold">Albert Selina</td>
-      <td class="bigbold">-13</td>
+      <td class="bigbold">-11</td>
       <td>Scottie Scheffler -11
 -3 thru 9</td>
       <td>Corey Conners -2
 -1 thru 12</td>
-      <td>Will Zalatoris -1
-E thru 12</td>
       <td>Webb Simpson +1
 E thru 16</td>
+      <td>Will Zalatoris +1
++2 thru 13</td>
       <td class="greyout leftborder">Jon Rahm(W) +7
 +5 (F)</td>
       <td class="greyout">Xander Schauffele
@@ -300,22 +300,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-10</td>
-      <td>Cameron Smith -5
--3 thru 12</td>
-      <td>Shane Lowry -4
--1 thru 10</td>
-      <td>Will Zalatoris -1
-E thru 12</td>
-      <td>Justin Thomas(W) E
-+1 thru 14</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick +3
-+3 thru 16</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">The Resort</td>
       <td class="bigbold">-10</td>
       <td>Cameron Smith(W) -5
@@ -330,22 +314,6 @@ Missed Cut</td>
 -1 (F)</td>
       <td class="greyout">Jon Rahm +7
 +5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Wilson</td>
-      <td class="bigbold">-9</td>
-      <td>Scottie Scheffler(W) -11
--3 thru 9</td>
-      <td>Corey Conners -2
--1 thru 12</td>
-      <td>Will Zalatoris -1
-E thru 12</td>
-      <td>Jon Rahm +7
-+5 (F)</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
@@ -364,6 +332,22 @@ Missed Cut</td>
 +5 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-8</td>
+      <td>Cameron Smith -5
+-3 thru 12</td>
+      <td>Shane Lowry -4
+-1 thru 10</td>
+      <td>Justin Thomas(W) E
++1 thru 14</td>
+      <td>Will Zalatoris +1
++2 thru 13</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick +3
++3 thru 16</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Santorini Sunsets</td>
       <td class="bigbold">-7</td>
       <td>Scottie Scheffler -11
@@ -377,6 +361,22 @@ Missed Cut</td>
       <td class="greyout leftborder">Patrick Cantlay +6
 +5 thru 16</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Wilson</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler(W) -11
+-3 thru 9</td>
+      <td>Corey Conners -2
+-1 thru 12</td>
+      <td>Will Zalatoris +1
++2 thru 13</td>
+      <td>Jon Rahm +7
++5 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -428,22 +428,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Hadrian&#39;s Wall</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith -5
--3 thru 12</td>
-      <td>Corey Conners -2
--1 thru 12</td>
-      <td>Will Zalatoris -1
-E thru 12</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +6
-+5 thru 16</td>
-      <td class="greyout">Jon Rahm(W) +7
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Lyle Rattray</td>
       <td class="bigbold">-4</td>
       <td>Scottie Scheffler -11
@@ -474,6 +458,22 @@ Missed Cut</td>
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Hadrian&#39;s Wall</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -5
+-3 thru 12</td>
+      <td>Corey Conners -2
+-1 thru 12</td>
+      <td>Will Zalatoris +1
++2 thru 13</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +6
++5 thru 16</td>
+      <td class="greyout">Jon Rahm(W) +7
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
@@ -524,70 +524,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jabby</td>
-      <td class="bigbold">-2</td>
-      <td>Corey Conners -2
--1 thru 12</td>
-      <td>Will Zalatoris -1
-E thru 12</td>
-      <td>Justin Thomas(W) E
-+1 thru 14</td>
-      <td>Rory McIlroy +1
--1 (F)</td>
-      <td class="greyout leftborder">Jon Rahm +7
-+5 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Santorini Sunrises</td>
-      <td class="bigbold">-1</td>
-      <td>Cameron Smith -5
--3 thru 12</td>
-      <td>Corey Conners(W) -2
--1 thru 12</td>
-      <td>Will Zalatoris -1
-E thru 12</td>
-      <td>Jon Rahm +7
-+5 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Grace</td>
-      <td class="bigbold">-1</td>
-      <td>Corey Conners -2
--1 thru 12</td>
-      <td>Collin Morikawa -1
-E thru 12</td>
-      <td>Will Zalatoris -1
-E thru 12</td>
-      <td>Rory McIlroy +1
--1 (F)</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout">Xander Schauffele(W)
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">-1</td>
-      <td>Collin Morikawa -1
-E thru 12</td>
-      <td>Will Zalatoris -1
-E thru 12</td>
-      <td>Justin Thomas E
-+1 thru 14</td>
-      <td>Rory McIlroy +1
--1 (F)</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout">Tiger Woods(W) +5
-+4 thru 17</td>
-    </tr>
-    <tr>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">-1</td>
       <td>Shane Lowry(W) -4
@@ -604,19 +540,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">New Lu</td>
+      <td class="bigbold">Jabby</td>
       <td class="bigbold">0</td>
-      <td>Cameron Smith -5
--3 thru 12</td>
-      <td>Will Zalatoris -1
-E thru 12</td>
+      <td>Corey Conners -2
+-1 thru 12</td>
       <td>Justin Thomas(W) E
 +1 thru 14</td>
-      <td>Patrick Cantlay +6
-+5 thru 16</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
+      <td>Rory McIlroy +1
+-1 (F)</td>
+      <td>Will Zalatoris +1
++2 thru 13</td>
+      <td class="greyout leftborder">Jon Rahm +7
++5 (F)</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -630,6 +566,70 @@ Missed Cut</td>
 -1 (F)</td>
       <td>Jon Rahm(W) +7
 +5 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunrises</td>
+      <td class="bigbold">1</td>
+      <td>Cameron Smith -5
+-3 thru 12</td>
+      <td>Corey Conners(W) -2
+-1 thru 12</td>
+      <td>Will Zalatoris +1
++2 thru 13</td>
+      <td>Jon Rahm +7
++5 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Grace</td>
+      <td class="bigbold">1</td>
+      <td>Corey Conners -2
+-1 thru 12</td>
+      <td>Collin Morikawa -1
+E thru 12</td>
+      <td>Rory McIlroy +1
+-1 (F)</td>
+      <td>Will Zalatoris +1
++2 thru 13</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout">Xander Schauffele(W)
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">1</td>
+      <td>Collin Morikawa -1
+E thru 12</td>
+      <td>Justin Thomas E
++1 thru 14</td>
+      <td>Rory McIlroy +1
+-1 (F)</td>
+      <td>Will Zalatoris +1
++2 thru 13</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout">Tiger Woods(W) +5
++4 thru 17</td>
+    </tr>
+    <tr>
+      <td class="bigbold">New Lu</td>
+      <td class="bigbold">2</td>
+      <td>Cameron Smith -5
+-3 thru 12</td>
+      <td>Justin Thomas(W) E
++1 thru 14</td>
+      <td>Will Zalatoris +1
++2 thru 13</td>
+      <td>Patrick Cantlay +6
++5 thru 16</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -717,11 +717,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">9</td>
       <td>Collin Morikawa -1
 E thru 12</td>
-      <td>Will Zalatoris -1
-E thru 12</td>
+      <td>Will Zalatoris +1
++2 thru 13</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td>Patrick Cantlay +6
@@ -745,38 +745,6 @@ Missed Cut</td>
       <td class="greyout leftborder">Brooks Koepka(W)
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">9</td>
-      <td>Will Zalatoris -1
-E thru 12</td>
-      <td>Justin Thomas(W) E
-+1 thru 14</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Jon Rahm +7
-+5 (F)</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">9</td>
-      <td>Will Zalatoris -1
-E thru 12</td>
-      <td>Justin Thomas E
-+1 thru 14</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Jon Rahm(W) +7
-+5 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -808,6 +776,38 @@ E thru 12</td>
 +5 (F)</td>
       <td class="greyout leftborder">Jon Rahm +7
 +5 (F)</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">11</td>
+      <td>Justin Thomas(W) E
++1 thru 14</td>
+      <td>Will Zalatoris +1
++2 thru 13</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Jon Rahm +7
++5 (F)</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Kash Ahmad</td>
+      <td class="bigbold">11</td>
+      <td>Justin Thomas E
++1 thru 14</td>
+      <td>Will Zalatoris +1
++2 thru 13</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Jon Rahm(W) +7
++5 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -1044,8 +1044,8 @@ Missed Cut</td>
       <td class="bigbold greyout">Wylie</td>
       <td class="bigbold greyout">-</td>
       <td class="greyout">Scottie Scheffler</td>
-      <td class="greyout">Will Zalatoris</td>
       <td class="greyout">Justin Thomas(W)</td>
+      <td class="greyout">Will Zalatoris</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
       <td class="greyout leftborder">Louis Oosthuizen
