--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:13:15 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:13:58 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,15 +141,15 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-16</td>
+      <td class="bigbold">-14</td>
       <td>Scottie Scheffler -11
 -3 thru 9</td>
       <td>Shane Lowry -4
 -1 thru 10</td>
-      <td>Will Zalatoris -1
-E thru 12</td>
       <td>Justin Thomas(W) E
 +1 thru 14</td>
+      <td>Will Zalatoris +1
++2 thru 13</td>
       <td class="greyout leftborder">Tony Finau +4
 +2 (F)</td>
       <td class="greyout">Patrick Cantlay +6
@@ -157,13 +157,13 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-11</td>
+      <td class="bigbold">-9</td>
       <td>Scottie Scheffler(W) -11
 -3 thru 9</td>
       <td>Shane Lowry -4
 -1 thru 10</td>
-      <td>Will Zalatoris -1
-E thru 12</td>
+      <td>Will Zalatoris +1
++2 thru 13</td>
       <td>Jon Rahm +7
 +5 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -173,15 +173,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-10</td>
+      <td class="bigbold">-8</td>
       <td>Cameron Smith -5
 -3 thru 12</td>
       <td>Shane Lowry -4
 -1 thru 10</td>
-      <td>Will Zalatoris -1
-E thru 12</td>
       <td>Justin Thomas(W) E
 +1 thru 14</td>
+      <td>Will Zalatoris +1
++2 thru 13</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +3
 +3 thru 16</td>
       <td class="greyout">Brooks Koepka
@@ -269,13 +269,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">4</td>
       <td>Collin Morikawa -1
-E thru 12</td>
-      <td>Will Zalatoris -1
 E thru 12</td>
       <td>Justin Thomas(W) E
 +1 thru 14</td>
+      <td>Will Zalatoris +1
++2 thru 13</td>
       <td>Tony Finau +4
 +2 (F)</td>
       <td class="greyout leftborder">Daniel Berger +7
