--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:26:09 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:26:52 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -156,6 +156,22 @@ body {
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Stan and Ollie Garch</td>
+      <td class="bigbold">-18</td>
+      <td>Scottie Scheffler -11
+-3 thru 10</td>
+      <td>Shane Lowry -4
+-1 thru 11</td>
+      <td>Corey Conners -2
+-1 thru 13</td>
+      <td>Justin Thomas(W) -1
+E thru 16</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-17</td>
       <td>Scottie Scheffler -11
@@ -169,22 +185,6 @@ Missed Cut</td>
       <td class="greyout leftborder">Russell Henley +7
 +4 (F)</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Stan and Ollie Garch</td>
-      <td class="bigbold">-17</td>
-      <td>Scottie Scheffler -11
--3 thru 10</td>
-      <td>Shane Lowry -4
--1 thru 11</td>
-      <td>Corey Conners -2
--1 thru 13</td>
-      <td>Justin Thomas(W) E
-+1 thru 15</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -253,13 +253,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-13</td>
+      <td class="bigbold">-14</td>
       <td>Scottie Scheffler -11
 -3 thru 10</td>
       <td>Shane Lowry -4
 -1 thru 11</td>
-      <td>Justin Thomas(W) E
-+1 thru 15</td>
+      <td>Justin Thomas(W) -1
+E thru 16</td>
       <td>Will Zalatoris +2
 +3 thru 14</td>
       <td class="greyout leftborder">Tony Finau +4
@@ -316,6 +316,38 @@ E thru 17</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-9</td>
+      <td>Cameron Smith -6
+-4 thru 13</td>
+      <td>Shane Lowry -4
+-1 thru 11</td>
+      <td>Justin Thomas(W) -1
+E thru 16</td>
+      <td>Will Zalatoris +2
++3 thru 14</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick +3
++3 thru 16</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">-8</td>
+      <td>Scottie Scheffler -11
+-3 thru 10</td>
+      <td>Justin Thomas(W) -1
+E thru 16</td>
+      <td>Rory McIlroy +1
+-1 (F)</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
++6 thru 17</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Roy Jeffrey B</td>
       <td class="bigbold">-8</td>
       <td>Scottie Scheffler(W) -11
@@ -332,46 +364,14 @@ Missed Cut</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-8</td>
-      <td>Cameron Smith -6
--4 thru 13</td>
-      <td>Shane Lowry -4
--1 thru 11</td>
-      <td>Justin Thomas(W) E
-+1 thru 15</td>
-      <td>Will Zalatoris +2
-+3 thru 14</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick +3
-+3 thru 16</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-7</td>
-      <td>Scottie Scheffler -11
--3 thru 10</td>
-      <td>Justin Thomas(W) E
-+1 thru 15</td>
-      <td>Rory McIlroy +1
--1 (F)</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
-+6 thru 17</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Bill Hunter</td>
-      <td class="bigbold">-7</td>
+      <td class="bigbold">-8</td>
       <td>Cameron Smith(W) -6
 -4 thru 13</td>
       <td>Corey Conners -2
 -1 thru 13</td>
-      <td>Justin Thomas E
-+1 thru 15</td>
+      <td>Justin Thomas -1
+E thru 16</td>
       <td>Hideki Matsuyama +1
 +4 thru 12</td>
       <td class="greyout leftborder">Marc Leishman +3
@@ -381,13 +381,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Baggy Pants</td>
-      <td class="bigbold">-7</td>
+      <td class="bigbold">-8</td>
       <td>Cameron Smith -6
 -4 thru 13</td>
       <td>Shane Lowry -4
 -1 thru 11</td>
-      <td>Justin Thomas(W) E
-+1 thru 15</td>
+      <td>Justin Thomas(W) -1
+E thru 16</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -429,18 +429,34 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">-6</td>
       <td>Cameron Smith(W) -6
 -4 thru 13</td>
       <td>Corey Conners -2
 -1 thru 13</td>
-      <td>Justin Thomas E
-+1 thru 15</td>
+      <td>Justin Thomas -1
+E thru 16</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith -6
+-4 thru 13</td>
+      <td>Justin Thomas -1
+E thru 16</td>
+      <td>Rory McIlroy(W) +1
+-1 (F)</td>
+      <td>Hideki Matsuyama +1
++4 thru 12</td>
+      <td class="greyout leftborder">Tiger Woods +7
++6 (F)</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -457,22 +473,6 @@ Missed Cut</td>
       <td class="greyout leftborder">Jon Rahm(W) +7
 +5 (F)</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith -6
--4 thru 13</td>
-      <td>Justin Thomas E
-+1 thru 15</td>
-      <td>Rory McIlroy(W) +1
--1 (F)</td>
-      <td>Hideki Matsuyama +1
-+4 thru 12</td>
-      <td class="greyout leftborder">Tiger Woods +7
-+6 (F)</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -525,18 +525,34 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">-2</td>
       <td>Shane Lowry(W) -4
 -1 thru 11</td>
       <td>Corey Conners -2
 -1 thru 13</td>
-      <td>Joaquin Niemann +2
-+3 thru 14</td>
+      <td>Joaquin Niemann +1
++2 thru 15</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Brian Harman
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jabby</td>
+      <td class="bigbold">0</td>
+      <td>Corey Conners -2
+-1 thru 13</td>
+      <td>Justin Thomas(W) -1
+E thru 16</td>
+      <td>Rory McIlroy +1
+-1 (F)</td>
+      <td>Will Zalatoris +2
++3 thru 14</td>
+      <td class="greyout leftborder">Jon Rahm +7
++5 (F)</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -572,19 +588,51 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jabby</td>
-      <td class="bigbold">1</td>
-      <td>Corey Conners -2
--1 thru 13</td>
-      <td>Justin Thomas(W) E
-+1 thru 15</td>
+      <td class="bigbold">New Lu</td>
+      <td class="bigbold">2</td>
+      <td>Cameron Smith -6
+-4 thru 13</td>
+      <td>Justin Thomas(W) -1
+E thru 16</td>
+      <td>Will Zalatoris +2
++3 thru 14</td>
+      <td>Patrick Cantlay +7
++6 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">2</td>
+      <td>Justin Thomas -1
+E thru 16</td>
+      <td>Collin Morikawa E
++1 thru 14</td>
       <td>Rory McIlroy +1
 -1 (F)</td>
       <td>Will Zalatoris +2
 +3 thru 14</td>
-      <td class="greyout leftborder">Jon Rahm +7
-+5 (F)</td>
-      <td class="greyout">Brooks Koepka
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout">Tiger Woods(W) +7
++6 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">3</td>
+      <td>Justin Thomas -1
+E thru 16</td>
+      <td>Collin Morikawa(W) E
++1 thru 14</td>
+      <td>Rory McIlroy +1
+-1 (F)</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout leftborder">Tiger Woods +7
++6 (F)</td>
+      <td class="greyout">Gary Woodland
 Missed Cut</td>
     </tr>
     <tr>
@@ -604,38 +652,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">New Lu</td>
-      <td class="bigbold">3</td>
-      <td>Cameron Smith -6
--4 thru 13</td>
-      <td>Justin Thomas(W) E
-+1 thru 15</td>
-      <td>Will Zalatoris +2
-+3 thru 14</td>
-      <td>Patrick Cantlay +7
-+6 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">3</td>
-      <td>Collin Morikawa E
-+1 thru 14</td>
-      <td>Justin Thomas E
-+1 thru 15</td>
-      <td>Rory McIlroy +1
--1 (F)</td>
-      <td>Will Zalatoris +2
-+3 thru 14</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout">Tiger Woods(W) +7
-+6 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
       <td class="bigbold">3</td>
       <td>Shane Lowry -4
@@ -652,19 +668,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">4</td>
-      <td>Collin Morikawa(W) E
-+1 thru 14</td>
-      <td>Justin Thomas E
-+1 thru 15</td>
+      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">5</td>
+      <td>Corey Conners -2
+-1 thru 13</td>
+      <td>Justin Thomas -1
+E thru 16</td>
       <td>Rory McIlroy +1
 -1 (F)</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout leftborder">Tiger Woods +7
-+6 (F)</td>
-      <td class="greyout">Gary Woodland
+      <td>Jon Rahm(W) +7
++5 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -700,22 +716,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">6</td>
-      <td>Corey Conners -2
--1 thru 13</td>
-      <td>Justin Thomas E
-+1 thru 15</td>
-      <td>Rory McIlroy +1
--1 (F)</td>
-      <td>Jon Rahm(W) +7
-+5 (F)</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">CRED</td>
       <td class="bigbold">10</td>
       <td>Scottie Scheffler -11
@@ -748,6 +748,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">11</td>
+      <td>Justin Thomas(W) -1
+E thru 16</td>
+      <td>Will Zalatoris +2
++3 thru 14</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Jon Rahm +7
++5 (F)</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">11</td>
       <td>Corey Conners(W) -2
@@ -760,6 +776,22 @@ Missed Cut</td>
 +5 (F)</td>
       <td class="greyout leftborder">Jon Rahm +7
 +5 (F)</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Kash Ahmad</td>
+      <td class="bigbold">11</td>
+      <td>Justin Thomas -1
+E thru 16</td>
+      <td>Will Zalatoris +2
++3 thru 14</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Jon Rahm(W) +7
++5 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -780,38 +812,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">12</td>
-      <td>Justin Thomas(W) E
-+1 thru 15</td>
-      <td>Will Zalatoris +2
-+3 thru 14</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Jon Rahm +7
-+5 (F)</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">12</td>
-      <td>Justin Thomas E
-+1 thru 15</td>
-      <td>Will Zalatoris +2
-+3 thru 14</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Jon Rahm(W) +7
-+5 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">14</td>
       <td>Collin Morikawa E
@@ -825,6 +825,38 @@ Missed Cut</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">14</td>
+      <td>Justin Thomas -1
+E thru 16</td>
+      <td>Hideki Matsuyama +1
++4 thru 12</td>
+      <td>Jon Rahm(W) +7
++5 (F)</td>
+      <td>Patrick Cantlay +7
++6 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Hasbulla</td>
+      <td class="bigbold">14</td>
+      <td>Justin Thomas -1
+E thru 16</td>
+      <td>Rory McIlroy +1
+-1 (F)</td>
+      <td>Patrick Cantlay(W) +7
++6 thru 17</td>
+      <td>Jon Rahm +7
++5 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -844,42 +876,10 @@ Out With Injury</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">15</td>
-      <td>Justin Thomas E
-+1 thru 15</td>
-      <td>Hideki Matsuyama +1
-+4 thru 12</td>
-      <td>Jon Rahm(W) +7
-+5 (F)</td>
-      <td>Patrick Cantlay +7
-+6 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">15</td>
-      <td>Justin Thomas E
-+1 thru 15</td>
-      <td>Rory McIlroy +1
--1 (F)</td>
-      <td>Patrick Cantlay(W) +7
-+6 thru 17</td>
-      <td>Jon Rahm +7
-+5 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">17</td>
-      <td>Justin Thomas(W) E
-+1 thru 15</td>
+      <td class="bigbold">16</td>
+      <td>Justin Thomas(W) -1
+E thru 16</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td>Daniel Berger +7
