--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:26:09 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 5:26:52 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,19 +141,35 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-13</td>
+      <td class="bigbold">-14</td>
       <td>Scottie Scheffler -11
 -3 thru 10</td>
       <td>Shane Lowry -4
 -1 thru 11</td>
-      <td>Justin Thomas(W) E
-+1 thru 15</td>
+      <td>Justin Thomas(W) -1
+E thru 16</td>
       <td>Will Zalatoris +2
 +3 thru 14</td>
       <td class="greyout leftborder">Tony Finau +4
 +2 (F)</td>
       <td class="greyout">Patrick Cantlay +7
 +6 thru 17</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-9</td>
+      <td>Cameron Smith -6
+-4 thru 13</td>
+      <td>Shane Lowry -4
+-1 thru 11</td>
+      <td>Justin Thomas(W) -1
+E thru 16</td>
+      <td>Will Zalatoris +2
++3 thru 14</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick +3
++3 thru 16</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -172,30 +188,14 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-8</td>
-      <td>Cameron Smith -6
--4 thru 13</td>
-      <td>Shane Lowry -4
--1 thru 11</td>
-      <td>Justin Thomas(W) E
-+1 thru 15</td>
-      <td>Will Zalatoris +2
-+3 thru 14</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick +3
-+3 thru 16</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">-6</td>
       <td>Cameron Smith(W) -6
 -4 thru 13</td>
       <td>Corey Conners -2
 -1 thru 13</td>
-      <td>Justin Thomas E
-+1 thru 15</td>
+      <td>Justin Thomas -1
+E thru 16</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -205,29 +205,29 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">-5</td>
       <td>Cameron Smith -6
 -4 thru 13</td>
-      <td>Justin Thomas E
-+1 thru 15</td>
+      <td>Justin Thomas -1
+E thru 16</td>
       <td>Tommy Fleetwood(W) +1
 -2 (F)</td>
-      <td>Rory McIlroy +1
+      <td>Joaquin Niemann +1
++2 thru 15</td>
+      <td class="greyout leftborder">Rory McIlroy +1
 -1 (F)</td>
-      <td class="greyout leftborder">Joaquin Niemann +2
-+3 thru 14</td>
       <td class="greyout">Viktor Hovland +3
 -1 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">0</td>
       <td>Shane Lowry -4
 -1 thru 11</td>
       <td>Corey Conners -2
 -1 thru 13</td>
-      <td>Justin Thomas(W) E
-+1 thru 15</td>
+      <td>Justin Thomas(W) -1
+E thru 16</td>
       <td>Jon Rahm +7
 +5 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -237,11 +237,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">1</td>
+      <td>Justin Thomas -1
+E thru 16</td>
       <td>Sungjae Im -1
 +2 thru 11</td>
-      <td>Justin Thomas E
-+1 thru 15</td>
       <td>Collin Morikawa E
 +1 thru 14</td>
       <td>Viktor Hovland(W) +3
@@ -269,9 +269,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">6</td>
-      <td>Justin Thomas(W) E
-+1 thru 15</td>
+      <td class="bigbold">5</td>
+      <td>Justin Thomas(W) -1
+E thru 16</td>
       <td>Collin Morikawa E
 +1 thru 14</td>
       <td>Will Zalatoris +2
@@ -285,13 +285,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">6</td>
       <td>Corey Conners -2
 -1 thru 13</td>
+      <td>Justin Thomas -1
+E thru 16</td>
       <td>Dustin Johnson E
 +2 thru 12</td>
-      <td>Justin Thomas E
-+1 thru 15</td>
       <td>Russell Henley +7
 +4 (F)</td>
       <td class="greyout leftborder">Xander Schauffele(W)
